<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/record_family_planning"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingTop="10dp">

    <LinearLayout
        android:id="@+id/record_recurring_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:visibility="gone"
        android:weightSum="2">

        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/textview_record_reccuring_visit"
            style="@style/CustomFontTextViewStyle.ListView.Normal.MultipleLines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_weight="1"
            android:background="@drawable/record_tb_followup"
            android:gravity="center_horizontal"
            android:paddingLeft="30dp"
            android:paddingTop="10dp"
            android:paddingRight="30dp"
            android:paddingBottom="10dp"
            android:text="@string/record_tb_followup"
            android:textColor="@color/white"
            android:visibility="gone" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/record_visit_status_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="10dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/tick_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/activity_row_tb_visited" />


        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/textview_visit_done"
            style="@style/CustomFontTextViewStyle.ListView.Normal.MultipleLines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/textview_undo"
            android:layout_toRightOf="@+id/tick_image"
            android:padding="10dp"
            android:text="@string/tb_visit_done"
            android:textColor="@color/black" />

        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/textview_undo"
            style="@style/CustomFontTextViewStyle.ListView.Normal.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="10dp"
            android:text="@string/undo"
            android:textColor="@color/primary"
            android:visibility="gone" />

        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/textview_edit"
            style="@style/CustomFontTextViewStyle.ListView.Normal.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="10dp"
            android:text="@string/tb_visit_edit"
            android:textColor="@color/primary"
            android:visibility="gone" />

    </RelativeLayout>

    <View
        android:id="@+id/view_record"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="5dp"
        android:background="@color/light_grey" />
</LinearLayout>