<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="org.smartregister.chw.tb.model.BaseReferralFollowupModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/collapsing_toolbar_appbarlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/AppTheme.AppBarOverlay">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:toolbarId="@+id/collapsing_toolbar">

                <LinearLayout
                    android:id="@+id/profile_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:paddingTop="64dp"
                    app:layout_collapseMode="parallax">

                    <org.smartregister.view.customcontrols.CustomFontTextView
                        android:id="@+id/textview_name"
                        style="@style/CustomFontTextViewStyle.ClientList"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:paddingStart="0dp"
                        android:layout_marginStart="32dp"
                        android:paddingEnd="0dp"
                        android:text="@string/patient_name_age"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/register_member_name_size" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <org.smartregister.view.customcontrols.CustomFontTextView
                            android:id="@+id/textview_gender"
                            style="@style/CustomFontTextViewStyle.ClientList.Light"
                            android:layout_width="wrap_content"
                            android:paddingStart="0dp"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/gender"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/register_member_village_size" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/profile_dot_separator_margin"
                            android:layout_marginRight="@dimen/profile_dot_separator_margin"
                            android:text="@string/interpunct"
                            android:textColor="@android:color/black" />

                        <org.smartregister.view.customcontrols.CustomFontTextView
                            android:id="@+id/textview_address"
                            style="@style/CustomFontTextViewStyle.ClientList.Light"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:paddingStart="0dp"
                            android:paddingEnd="0dp"
                            android:text="Address #24"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/register_member_village_size" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/profile_dot_separator_margin"
                            android:layout_marginRight="@dimen/profile_dot_separator_margin"
                            android:text="@string/interpunct"
                            android:textColor="@android:color/black" />


                        <org.smartregister.view.customcontrols.CustomFontTextView
                            android:id="@+id/textview_id"
                            style="@style/CustomFontTextViewStyle.ClientList.Light"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:paddingStart="0dp"
                            android:paddingEnd="0dp"
                            android:text="ID:123456"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/register_member_village_size" />
                    </LinearLayout>

                    <org.smartregister.view.customcontrols.CustomFontTextView
                        android:id="@+id/family_head"
                        style="@style/CustomFontTextViewStyle.ClientList.Light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="0dp"
                        android:paddingTop="@dimen/register_list_top_bottom_min_padding"
                        android:text="@string/family_head"
                        android:textAllCaps="true"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/register_list_desc_size"
                        android:visibility="gone" />

                    <org.smartregister.view.customcontrols.CustomFontTextView
                        android:id="@+id/primary_caregiver"
                        style="@style/CustomFontTextViewStyle.ClientList.Light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="0dp"
                        android:paddingTop="@dimen/register_list_top_bottom_min_padding"
                        android:paddingBottom="8dp"
                        android:text="@string/primary_care_giver"
                        android:textAllCaps="true"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/register_list_desc_size"
                        android:visibility="gone" />
                </LinearLayout>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/collapsing_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:gravity="top"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/AppTheme.PopupOverlay">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/return_to_previous"
                        android:textColor="@color/black" />
                </androidx.appcompat.widget.Toolbar>
            </com.google.android.material.appbar.CollapsingToolbarLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/light_grey"
                android:visibility="visible" />
        </com.google.android.material.appbar.AppBarLayout>

        <include
            layout="@layout/content_followup"
            android:visibility="visible" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
